// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> Checked story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="checkbox"
  >
    <input
      checked=""
      class="checkbox__input"
      id=":r3:"
      type="checkbox"
    />
    <div
      class="checkbox__labels"
    >
      <label
        class="label label--lg"
        for=":r3:"
      >
        <span
          class="text text--label-lg"
        >
          Checkbox
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Default story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="checkbox"
  >
    <input
      class="checkbox__input"
      id=":r0:"
      type="checkbox"
    />
    <div
      class="checkbox__labels"
    >
      <label
        class="label label--lg"
        for=":r0:"
      >
        <span
          class="text text--label-lg"
        >
          Checkbox
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Disabled story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="p-0"
  >
    <div
      class="checkbox"
    >
      <input
        class="checkbox__input"
        disabled=""
        id=":r6:"
        type="checkbox"
      />
      <div
        class="checkbox__labels"
      >
        <label
          aria-disabled="true"
          class="label label--lg label--disabled"
          for=":r6:"
        >
          <span
            class="text text--label-lg"
          >
            Disabled
          </span>
        </label>
      </div>
    </div>
    <div
      class="checkbox"
    >
      <input
        checked=""
        class="checkbox__input"
        disabled=""
        id=":r7:"
        type="checkbox"
      />
      <div
        class="checkbox__labels"
      >
        <label
          aria-disabled="true"
          class="label label--lg label--disabled"
          for=":r7:"
        >
          <span
            class="text text--label-lg"
          >
            Disabled
          </span>
        </label>
      </div>
    </div>
    <div
      class="checkbox"
    >
      <input
        class="checkbox__input"
        disabled=""
        id=":r8:"
        type="checkbox"
      />
      <div
        class="checkbox__labels"
      >
        <label
          aria-disabled="true"
          class="label label--lg label--disabled"
          for=":r8:"
        >
          <span
            class="text text--label-lg"
          >
            Disabled
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Disabled story renders snapshot 2`] = `
<div
  class="checkbox"
>
  <input
    class="checkbox__input"
    disabled=""
    id=":rb:"
    type="checkbox"
  />
  <div
    class="checkbox__labels"
  >
    <label
      aria-disabled="true"
      class="label label--lg label--disabled"
      for=":rb:"
    >
      <span
        class="text text--label-lg"
      >
        Disabled
      </span>
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> Error story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="checkbox checkbox--error"
  >
    <input
      class="checkbox__input"
      id=":r2:"
      type="checkbox"
    />
    <div
      class="checkbox__labels"
    >
      <label
        class="label label--lg"
        for=":r2:"
      >
        <span
          class="text text--label-lg"
        >
          In error state
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> GlyphIsConsistent story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    style="font-size: 10px;"
  >
    <div
      class="checkbox"
    >
      <input
        checked=""
        class="checkbox__input"
        id=":r4:"
        type="checkbox"
      />
      <div
        class="checkbox__labels"
      >
        <label
          class="label label--lg"
          for=":r4:"
        >
          <span
            class="text text--label-lg"
          >
            Checkbox
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Indeterminate story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="checkbox"
  >
    <input
      class="checkbox__input"
      id=":r5:"
      type="checkbox"
    />
    <div
      class="checkbox__labels"
    >
      <label
        class="label label--lg"
        for=":r5:"
      >
        <span
          class="text text--label-lg"
        >
          Checkbox
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> LongLabels story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="checkbox"
  >
    <input
      class="checkbox__input"
      id=":ra:"
      type="checkbox"
    />
    <div
      class="checkbox__labels"
    >
      <label
        class="label label--lg"
        for=":ra:"
      >
        <span
          class="text text--label-lg"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> WithSublabel story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="checkbox"
  >
    <input
      class="checkbox__input"
      id=":r1:"
      type="checkbox"
    />
    <div
      class="checkbox__labels"
    >
      <label
        class="label label--lg"
        for=":r1:"
      >
        <span
          class="text text--label-lg"
        >
          Checkbox
        </span>
      </label>
      <span
        class="text text--body-sm checkbox__sub-label"
      >
        Additional descriptive text
      </span>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> WithoutVisibleLabel story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="checkbox"
  >
    <input
      aria-label="a checkbox has no name"
      class="checkbox__input"
      id=":r9:"
      type="checkbox"
    />
    <div
      class="checkbox__labels"
    />
  </div>
</div>
`;
